# pylambertw

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: python-app.yml
notebooks/: demo-gaussianize.ipynb  demo-maximum-likelihood-lambertw-f.ipynb
pylambertw/: __init__.py  _version.py  base.py  igmm.py  mle.py
pylambertw/preprocessing/: gaussianizing.py  transforms.py
pylambertw/tests/: test_gaussianizing.py  test_igmm.py  test_mle.py  test_preprocessing.py  test_utils.py
pylambertw/utils/: distributions.py  moments.py  plot.py
